# rockbottom

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml  release.yml
src/: app.cpp  main.cpp  sampler.cpp  sampler.hpp  units.hpp
src/core/: config.hpp  metrics.hpp  procfs.hpp  sampler.cpp  sampler.hpp  units.hpp  verdict.cpp
src/core/collectors/: battery.cpp  cpu.cpp  disk.cpp  diskio.cpp  gpu.cpp  mem.cpp  net.cpp  ports.cpp  proc.cpp  psi.cpp
src/core/platform/common/: sys_util.hpp
src/core/platform/darwin/: battery.cpp  cpu.cpp  disk.cpp  diskio.cpp  gpu.cpp  mach_util.hpp  mem.cpp  net.cpp  ports.cpp  proc.cpp  psi.cpp  sensors.cpp  wireless.cpp
src/core/platform/linux/: battery.cpp  cpu.cpp  disk.cpp  diskio.cpp  gpu.cpp  mem.cpp  net.cpp  ports.cpp  proc.cpp  procfs.hpp  psi.cpp  sensors.cpp  termux.hpp  wireless.cpp
src/ui/: app.hpp  fmt.hpp  proc_order.hpp  proc_query.hpp  state.hpp  theme.hpp
src/ui/widgets/: bars.hpp  cpu_panel.hpp  detail.hpp  detail_kind.hpp  disk_panel.hpp  footer.hpp  graph.hpp  header.hpp  help.hpp  hit_ids.hpp  logo.hpp  mem_panel.hpp  meter.hpp  net_panel.hpp  nice_menu.hpp  panel.hpp  proc_panel.hpp  signal_menu.hpp  spark.hpp  theme_menu.hpp  verdict.hpp
src/ui/widgets/detail/: common.hpp  cpu.hpp  disk.hpp  gpu.hpp  mem.hpp  net.hpp  proc.hpp
